# project_3301_repo

./: .gitignore  LICENSE  README.md  analyse_camera_bandwidth.py  analyse_tegrastats.py  auto_process.py  calibrate.py  calibrate_simple.py  camera_test_1.py  capture_image.py  config.py  config_calibration.json  config_template.py  environment.yml  idle_power_draw.txt  plot_tegrastats.py  pyproject.toml  read_image.py  record.txt  scheduled_runs.py  send_data.py  setup.py  startup.sh  system_dependencies.txt  test_cv_local_img.py  test_cv_local_img_create_dataset.py  test_cv_local_img_fixtime.py  test_cv_local_img_interrupt.py  testing.py  useability_testing.sh  yanxu_test.py
analog_gauge_reader/: pipeline_v2.py  pipeline_v3.py  pipeline_v4.py  pipeline_v5.py  pipeline_v5_run.py  pipeline_v6.py  plots.py  plots_circle.py
full_process/: .gitignore  auto_process.py  calibrate.py  camera_test_1.py  capture_image.py  config.py  config_calibration.json  gauge_reader.txt  read_image.py
project_3301.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
stats/: subprocess_output_0_brass_gauge_right_1280_720_bandwidth_stats_20251026_011900.txt  subprocess_output_0_brass_gauge_right_1920_1080_bandwidth_stats_20251026_011920.txt  subprocess_output_0_brass_gauge_right_2048_1536_bandwidth_stats_20251026_011956.txt  subprocess_output_0_brass_gauge_right_2592_1944_bandwidth_stats_20251026_012122.txt  subprocess_output_0_brass_gauge_right_640_480_bandwidth_stats_20251026_011724.txt  subprocess_output_3_casing_gauge_1280_720_bandwidth_stats_20251026_012619.txt  (+16 more)
(+25 files in other folders)
