[project]
name = "project-3301"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "project_3301", from = "src"}]


[build-system]
requires = ["setuptools>=45", "wheel", "poetry-core<2.0.0"]
build-backend = "setuptools.build_meta"
